# fdb-otel-exporter

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  prometheus.yml
.github/workflows/: ci.yml
fdb-otel-exporter/: COVERAGE.md  Cargo.toml  Dockerfile  gauge_config.toml
fdb-otel-exporter/.cargo/: config.toml
fdb-otel-exporter/src/: config.rs  exporter_metrics.rs  fake_trace_event.rs  fdb_counter.rs  fdb_gauge.rs  fdb_metric.rs  gauge_config.rs  log_metrics.rs  main.rs  metrics_handler.rs  sample_log_writer.rs  test_helpers.rs  watch_logs.rs
grafana-provisioning/dashboards/: provider.yml
grafana-provisioning/dashboards/json/: fdb.json
