[package]
name = "fdb-otel-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
opentelemetry = { version = "0.23", features = ["metrics"] }
opentelemetry_sdk = { version = "0.23", features = ["metrics", "rt-tokio"] }
opentelemetry-prometheus = "0.16"
prometheus = "0.13"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "signal"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing-appender = "0.2"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3.10"
vfs = "0.12"
